--- a/frontend/src/app/module/cfrecord-query/component/cfrecord-list/cfrecord-list.component.html
+++ b/frontend/src/app/module/cfrecord-query/component/cfrecord-list/cfrecord-list.component.html
@@ -1,22 +1,28 @@
 <nz-table #nzTable [nzData]="cfRecordVOs" [nzShowPagination]="false">
     <tbody>
-      <ng-template ngFor let-cfRecordVO [ngForOf]="nzTable.data">
-        <tr [ngClass]="{'row-income' : cfRecordVO.inExType == EnumInExType.INCOME, 'row-expenses' : cfRecordVO.inExType == EnumInExType.EXPENSES}">
-          <td class="thin-padding">
-            <table>
-              <tr>
-                <td style="padding:0px 3px; border:none;">{{cfRecordVO.recordDateTime | date:'yyyy-MM-dd HH:mm:ss'}}</td>
-                <td style="padding:0px 3px; border:none;" class="align-right money" rowspan="2">{{cfRecordVO.localMoney | number:'1.2-2'}}</td>
-                <td style="padding:0px 3px; border:none; width:24px; font-size:20px;" rowspan="2"><a routerLink="../detail/{{cfRecordVO.id}}"><i class="anticon anticon-right-circle-o"></i></a></td>
-              </tr>
-              <tr [ngSwitch]="cfRecordVO.inExType">
-                <td *ngSwitchCase="EnumInExType.INCOME"   style="padding:0px 3px; border:none;"><span class="account">{{cfRecordVO.flowInAccountName}}  <nz-tag nzColor="green">{{cfRecordVO.inExCategoryName}}</nz-tag></span></td>
-                <td *ngSwitchCase="EnumInExType.EXPENSES" style="padding:0px 3px; border:none;"><span class="account">{{cfRecordVO.flowOutAccountName}} <nz-tag nzColor="red">{{cfRecordVO.inExCategoryName}}</nz-tag></span></td>
-                <td *ngSwitchCase="EnumInExType.NONE"     style="padding:0px 3px; border:none;"><span class="account">{{cfRecordVO.flowOutAccountName}} <i class="anticon anticon-arrow-right"></i> {{cfRecordVO.flowInAccountName}}</span></td>
-              </tr>
-            </table>
-          </td>
-        </tr>
-    </ng-template>
+        <ng-template ngFor let-cfRecordVO [ngForOf]="nzTable.data">
+            <tr [ngClass]="{'row-income' : cfRecordVO.inExType == EnumInExType.INCOME, 'row-expenses' : cfRecordVO.inExType == EnumInExType.EXPENSES}">
+                <td class="thin-padding">
+                    <table>
+                        <tr>
+                            <td style="padding:0px 3px; border:none;">{{cfRecordVO.recordDateTime | date:'yyyy-MM-dd HH:mm:ss'}}</td>
+                            <td style="padding:0px 3px; border:none;" class="align-right money" rowspan="2">{{cfRecordVO.localMoney | number:'1.2-2'}}</td>
+                            <td style="padding:0px 3px; border:none; width:24px; font-size:20px;" rowspan="2"><a routerLink="../detail/{{cfRecordVO.id}}"><i class="anticon anticon-right-circle-o"></i></a></td>
+                        </tr>
+                        <tr [ngSwitch]="cfRecordVO.inExType">
+                            <td *ngSwitchCase="EnumInExType.INCOME"   style="padding:0px 3px; border:none;"><span class="account">{{cfRecordVO.flowInAccountName}}  <nz-tag nzColor="green">{{cfRecordVO.inExCategoryName}}</nz-tag></span></td>
+                            <td *ngSwitchCase="EnumInExType.EXPENSES" style="padding:0px 3px; border:none;"><span class="account">{{cfRecordVO.flowOutAccountName}} <nz-tag nzColor="red">{{cfRecordVO.inExCategoryName}}</nz-tag></span></td>
+                            <td *ngSwitchCase="EnumInExType.NONE"     style="padding:0px 3px; border:none;"><span class="account">{{cfRecordVO.flowOutAccountName}} <i class="anticon anticon-arrow-right"></i> {{cfRecordVO.flowInAccountName}}</span></td>
+                        </tr>
+                        <tr>
+                        <td colspan="3" style="padding:0px">
+                            <ng-container *ngIf="'' != cfRecordVO.remark">{{cfRecordVO.remark}}</ng-container>
+                            <ng-container *ngIf="'' == cfRecordVO.remark"><span style="color:gray">无备注</span></ng-container>
+                        </td>
+                        </tr>
+                    </table>
+                </td>
+            </tr>
+        </ng-template>
     </tbody>
-  </nz-table>
+</nz-table>
