--- a/frontend/src/app/module/cfrecord-query/component/cfrecord-query/cfrecord-query.component.html
+++ b/frontend/src/app/module/cfrecord-query/component/cfrecord-query/cfrecord-query.component.html
@@ -1,3 +1,3 @@
-<div style="border: 1px solid #e8e8e8; border-radius: 4px; overflow: auto; padding: 0px 10px; height: 97%;">
+<div style="border-top: 1px solid #e8e8e8; overflow: auto; padding: 0px 10px; height: 97%;">
     <router-outlet></router-outlet>
 </div>
