--- a/frontend/src/app/module/cfrecord-query/component/query-conditions/query-conditions.component.html
+++ b/frontend/src/app/module/cfrecord-query/component/query-conditions/query-conditions.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="conditionForm" (ngSubmit)="query(conditionForm.value)" style="padding-bottom:60px;">
+<form [formGroup]="conditionForm" (ngSubmit)="query()" style="padding-bottom:60px;">
     <div nz-row>
         <div nz-col nzSpan="24">
             <nz-card formGroupName="moneyCondition" [nzBodyStyle]="{'padding-top' : '0px', 'padding-bottom' : '0px'}">
@@ -159,6 +159,6 @@
 
     <div nz-row style="position:fixed; left:0; bottom:0; width:100%; padding:10px 0px; border-top:1px solid #e8e8e8; background-color:white;">
         <span nz-col nzOffset="3" nzSpan="8"><button type="submit" nz-button nzType="primary" [disabled]="conditionForm.invalid" style="width: 100%;">Query</button></span>
-        <span nz-col nzOffset="2" nzSpan="8"><button nz-button style="width: 100%;">Reset</button></span>
+        <span nz-col nzOffset="2" nzSpan="8"><button type="reset"  nz-button style="width: 100%;">Reset</button></span>
     </div>
 </form>
