--- a/frontend/src/app/module/cfrecord-query/component/query-conditions/query-conditions.component.html
+++ b/frontend/src/app/module/cfrecord-query/component/query-conditions/query-conditions.component.html
@@ -35,6 +35,9 @@
                        style="position:absolute; top:-11px; background-color:white; padding-left:8px;">收支分类</label>
                 <nz-form-item>
                     <nz-form-control>
+                        <ef-account-select></ef-account-select>
+                    </nz-form-control>
+                    <nz-form-control>
                         <nz-input-group nzCompact>
                             <nz-select formControlName="inExType" style="width:30%;">
                                 <nz-option [nzLabel]="EnumInExType.INCOME"   [nzValue]="EnumInExType.INCOME"></nz-option>
