--- a/frontend/src/app/component/account-select/account-select.component.css
+++ b/frontend/src/app/component/account-select/account-select.component.css
@@ -1,14 +1,45 @@
-.ef-accountselect-selection 
+.ef-accountselect-selection
 {
-    height: 32px;
+    padding: 0px 5px;
+    line-height: 30px;
+    min-height: 32px;
     position: relative;
-    cursor: pointer;
     display: block;
-    background-color: #fff;
+
     border-radius: 4px;
     border: 1px solid #d9d9d9;
     border-top-width: 1.02px;
     transition: all .3s cubic-bezier(.645, .045, .355, 1);
+}
+
+.ef-accountselect-selection.enabled
+{
+    cursor: pointer;
+    background-color: #fff;
+}
+
+.ef-accountselect-selection.disabled
+{
+    cursor: not-allowed;
+    background: #f5f5f5;
+}
+
+.has-error .ef-accountselect-selection
+{
+    border-color: #f5222d;
+}
+
+.ef-accountselect-selection-tags
+{
+    line-height: 30px;
+    max-height: 90px;
+    overflow: auto;
+}
+
+.ef-accountselect-selection-search
+{
+    margin-top: 10px;
+    margin-bottom: 15px;
 }
 
 .ef-accountselect-selection-list
@@ -44,7 +75,7 @@
     transition: background .3s ease;
 }
 
-.ef-accountselect-selection-list-item:after 
+.ef-accountselect-selection-list-item:after
 {
     font-size: 12px;
     font-family: anticon;
@@ -76,7 +107,7 @@
     font-weight: 400;
 }
 
-.ef-accountselect-selection-list-item.no-selected:hover 
+.ef-accountselect-selection-list-item.no-selected:hover
 {
     background-color: #e6f7ff;
 }
