--- a/frontend/src/app/component/account-select/account-select.component.html
+++ b/frontend/src/app/component/account-select/account-select.component.html
@@ -1,8 +1,13 @@
-<div class="ef-accountselect-selection" (click)="showModal()">
-记账！
+<div class="ef-accountselect-selection"
+     [ngClass]="{'enabled' : !efDisabled, 'disabled' : efDisabled}"
+     (click)="showModal()">
+    <nz-tag *ngFor="let account of selectedAccounts">{{account.name}}</nz-tag>
 </div>
-<nz-modal [(nzVisible)]="modalVisible" nzTitle="The first Modal" (nzOnCancel)="handleCancel()" (nzOnOk)="handleOk()">
-    <nz-input-group nzSuffixIcon="anticon anticon-search" style="margin-bottom: 15px">
+<nz-modal [(nzVisible)]="modalVisible" nzTitle="The first Modal" [nzFooter]="modalFooter">
+    <div class="ef-accountselect-selection-tags">
+        <nz-tag nzMode="closeable" *ngFor="let account of modalSelectedAccounts; index as i;" (nzAfterClose)="deleteTag(account, i)">{{account.name}}</nz-tag>
+    </div>
+    <nz-input-group nzSuffixIcon="anticon anticon-search" class="ef-accountselect-selection-search">
         <input type="text" nz-input placeholder="input search text">
     </nz-input-group>
     <ul class="ef-accountselect-selection-list">
@@ -16,4 +21,9 @@
             </ul>
         </li>
     </ul>
+    <ng-template #modalFooter>
+        <button nz-button nzType="default" (click)="deselectAll()">Deselect All</button>
+        <button nz-button nzType="default" (click)="handleCancel()">Cancel</button>
+        <button nz-button nzType="primary" (click)="handleOk()">OK</button>
+    </ng-template>
 </nz-modal>
