--- a/frontend/src/app/component/account-select/account-select.component.css
+++ b/frontend/src/app/component/account-select/account-select.component.css
@@ -24,7 +24,7 @@
     background: #f5f5f5;
 }
 
-.has-error .ef-accountselect-selection
+:host-context(.has-error) .ef-accountselect-selection
 {
     border-color: #f5222d;
 }
