--- a/frontend/src/app/component/ef-select/ef-select.component.html
+++ b/frontend/src/app/component/ef-select/ef-select.component.html
@@ -1,11 +1,11 @@
 <div class="ef-select-selection"
      [ngClass]="{'enabled' : !efDisabled, 'disabled' : efDisabled}"
      (click)="showModal()">
-    <nz-tag *ngFor="let account of selectedAccounts">{{account.name}}</nz-tag>
+    <nz-tag *ngFor="let option of selectedOptions">{{option.label}}</nz-tag>
 </div>
 <nz-modal [(nzVisible)]="modalVisible" nzTitle="Select Accounts" [nzFooter]="modalFooter" (nzOnCancel)="handleCancel()">
     <div class="ef-select-selection-tags">
-        <nz-tag nzMode="closeable" *ngFor="let account of modalSelectedAccounts; index as i;" (nzAfterClose)="deleteTag(account, i)">{{account.name}}</nz-tag>
+        <nz-tag nzMode="closeable" *ngFor="let option of modalSelectedOptions; index as i;" (nzAfterClose)="deselectOption(option, i)">{{option.efLabel}}</nz-tag>
     </div>
     <nz-input-group nzSearch [nzSuffix]="suffixSearchIcon" class="ef-select-selection-search">
         <input #searchInput type="text" nz-input placeholder="input search text" (input)="searchSubject.next(searchInput.value)" >
@@ -16,18 +16,18 @@
         </ng-template>
     </nz-input-group>
     <ul class="ef-select-selection-list">
-        <li class="ef-select-selection-list-item-group" *ngFor="let group of filteredGroups">
-            <div class="ef-select-selection-list-item-group-title">{{group.name}}</div>
+        <li class="ef-select-selection-list-item-group" *ngFor="let group of optionGroups">
+            <div class="ef-select-selection-list-item-group-title">{{group.efLabel}}</div>
             <ul class="ef-select-selection-list-item-group-list">
-                <li *ngFor="let account of group.accounts"
+                <li *ngFor="let option of group.options"
                     class="ef-select-selection-list-item"
-                    [ngClass]="{'selected' : account.selected, 'no-selected' : !account.selected}"
-                    (click)="clickAccount(account)">{{account.name}}</li>
+                    [ngClass]="{'selected' : option.selected, 'no-selected' : !option.selected}"
+                    (click)="toggleOption(option)">{{option.efLabel}}</li>
             </ul>
         </li>
     </ul>
     <ng-template #modalFooter>
-        <button nz-button nzType="default" (click)="deselectAll()">Deselect All</button>
+        <button nz-button nzType="default" (click)="deselectAllOptions()">Deselect All</button>
         <button nz-button nzType="default" (click)="handleCancel()">Cancel</button>
         <button nz-button nzType="primary" (click)="handleOk()">OK</button>
     </ng-template>
